--- a/client/style/main.css
+++ b/client/style/main.css
@@ -228,3 +228,22 @@ form .group select{
 .centrer {
     text-align: center;
 }
+
+.panierElem, .panierHdr {
+    border-bottom: 1px solid #ddd;
+}
+
+.panierElem {
+    height:45px;
+}
+
+.tablePanier {
+    padding-top: 50px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.totalPanier {
+    padding-left: 60px;
+}
